...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.AnchorNotes.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/templatesListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/templatesAppBar"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:padding="12dp"
...
        android:padding="24dp"
        android:layout_below="@id/templatesAppBar"
        android:layout_marginTop="48dp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTemplateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:src="@android:drawable/ic_input_add"
...
