...

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="#007AFF" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="#007AFF" />
    </LinearLayout>

    <!-- Title -->
    <EditText
...
