...
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/templatesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Templates"
            android:layout_toEndOf="@id/tagsButton"
            android:layout_toStartOf="@id/mapButton"
            android:layout_centerVertical="true"
...
